[gd_scene load_steps=3 format=3 uid="uid://bvc00000te4ed"]

[ext_resource type="Script" uid="uid://drgmy1n4mxwhm" path="res://scenes/game/TumboElectionScene.gd" id="1_nwmm1"]
[ext_resource type="PackedScene" uid="uid://d4cahyk88y1p4" path="res://scenes/all-scenes-assets/CustomButton.tscn" id="3_b46cn"]

[node name="TumboElectionScene" type="Node2D"]
script = ExtResource("1_nwmm1")

[node name="AchicarseButton" parent="." instance=ExtResource("3_b46cn")]
offset_top = 62.0
offset_bottom = 107.0
text = "Achicarse"

[node name="TumbarButton" parent="." instance=ExtResource("3_b46cn")]
offset_top = 8.0
offset_bottom = 53.0
text = "Tumbar"
